--- a/src/main/java/ci553/happyshop/client/login/LoginStyle.css
+++ b/src/main/java/ci553/happyshop/client/login/LoginStyle.css
@@ -3,3 +3,9 @@
     -fx-color: white;
     -fx-border-radius: 12px;
 }
+
+.text-field{
+    -fx-background-color: purple;
+    -fx-border-radius: 12px;
+    -fx-max-width: 20px;
+}
